# asr-tts-course

./: .pre-commit-config.yaml  README.md  pyproject.toml
Assignment_1/: Dockerfile  dsp.ipynb  requirements.in  requirements.txt
Assignment_1/source/: dsp.ipynb  requirements.in  requirements.txt
